docs/build/iota-sdk/2.0/docs/how-tos/native-tokens/mint.mdx
---
title: Mint Native Tokens
sidebar_label: Increase Circulating Supply
description: 'How to mint native tokens'
image: /img/logo/iota_mark_light.png
tags:
  - how to
  - increase native token circulating supply
  - mint
  - foundry
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

After you have [created](create.mdx) a
[native token](/introduction/stardust/explanations/what_is_stardust/tokenization#native-tokens),
you may want to increase the circulating native token supply by minting more tokens.

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

The following example will:

1. Instantiate a [`Wallet`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Search the wallet's balance for a foundry and the first native token Id.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/mint.rs#L47-L53
```

</div>

3. Mint `MINT_AMOUNT` native tokens by calling the [`Wallet.mint_native_token()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.mint_native_token)
   function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/mint.rs#L61
```

</div>

4. Await for the transaction to be accepted by the network by calling the [`Wallet.wait_for_transaction_acceptance()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.wait_for_transaction_acceptance) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/mint.rs#L64-L66
```

</div>
</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

The following example will:

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Search the account's balance for a foundry and the first native token Id.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/mint.ts#L29-L41
```

</div>

3. Prepare to mint `MINT_AMOUNT` native tokens transaction by calling the [`Wallet.prepareMintNativeToken()`](../../references/nodejs/classes/Wallet.md#preparemintnativetoken)
   function and send the prepared transaction using the [`Wallet.send()`](../../references/nodejs/classes/Wallet.md#send)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/mint.ts#L45-L47
```

</div>

4. Await for the [`Transaction`](../../references/nodejs/classes/Transaction.md) to get confirmed by calling the
[`Wallet.waitForTransactionAcceptance()`](../../references/nodejs/classes/Wallet.md#waitfortransactionacceptance)
function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/mint.ts#L51
```

</div>

</TabItem>
<TabItem value="python" label="Python">

The following example will:

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/wallet/) and [sync it](../accounts-and-addresses/check-balance.mdx).

2. Search the account's balance for a foundry and the first native token Id.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/mint.py#L16-L18
```

</div>

3. Prepare to mint `mint_amount` native tokens transaction by calling the [`Wallet.mint_native_token()`](../../references/python/iota_sdk/wallet/wallet.md#mint_native_token)
   function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/mint.py#L29
```

</div>

4. Await for the transaction to get accepted by calling the [`Wallet.wait_for_transaction_acceptance()`](../../references/python/iota_sdk/wallet/wallet.md#wait_for_transaction_acceptance)
function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/mint.py#L32-L33
```

</div>

</TabItem>
</Tabs>

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/mint.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/mint.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/mint.py
```

</TabItem>
</Tabs>

### Expected Output

```
Balance before minting: 90
Transaction sent: 0x6dbec7c73ef511c3945eda6265d3de29a4f572a3bd95e39221cff18135e18ca6
Block included: https://explorer.shimmer.network/testnet/block/0x7b677c0562d8b2a7fdc1fd6182bb6364af517d41ec38a9dab9b29a1c7422f574
Balance after minting: 100
```
